tests/ui/issues/issue-46101.stderr
error[E0433]: failed to resolve: partially resolved path in a derive macro
  --> $DIR/issue-46101.rs:2:10
   |
LL | #[derive(Foo::Anything)]
   |          ^^^^^^^^^^^^^ partially resolved path in a derive macro

error[E0433]: failed to resolve: partially resolved path in a derive macro
  --> $DIR/issue-46101.rs:2:10
   |
LL | #[derive(Foo::Anything)]
   |          ^^^^^^^^^^^^^ partially resolved path in a derive macro
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
