tests/ui/issues/issue-46101.rs
trait Foo {}
#[derive(Foo::Anything)] //~ ERROR cannot find macro `Anything`
                         //~| ERROR cannot find macro `Anything`
struct S;

fn main() {}
